2012-03-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Turn off ISO and 7-bit mode if an Unicode text file is detected,
	  to prevent corruption of UTF-8 files.
	* Update English manual.
	* Fix compilation for WatcomC, DJGPP, MSYS, OS/2.
	* Makefile: Support CFLAGS_USER, LDFLAGS_USER, and DEFS_USER for
	  Debian Linux. Thanks to Jari Aalto.

2012-03-21 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 from stdin.
	* Update English manual.

2012-03-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 encoded files.

2012-03-16 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Make it compile on Cygwin 1.5.

2012-03-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.3
	* Makefile: Binary packages with native language support
	  get "-nls" suffix.

2012-03-08 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V prints target OS on DOS/Windows/OS2.

2012-03-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, mingw64.mak: Enabled wildcard
	  expansion for Win64 (MinGW-w64). Thanks to Steve Hay.
	* wccdos16.mak: Enabled wildcard expansion.
	* wccdos32.mak: Enabled wildcard expansion.
	* wccwin32.mak: Enabled wildcard expansion.
	* bcc.mak: Enabled wildcard expansion.

2012-03-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: New target 'mostlyclean' that preserves the manual
	  files. Target 'clean' removes all built files, it restores the
	  Unix source package to its original state.
	* Makefile: New variable HTMLEXT to override the default 'htm'
	  extension for the manual in HTML format.

2012-02-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, version.mk: Fix a compile error when debug
	  is enabled. Thanks to Maurizio Camisaschi and Lars Wendler.
	  See https://bugs.gentoo.org/400769
	* Makefile: Enable debugging info for gdb when DEBUG=1
	* man page: Small update in section RETURN VALUE.

2012-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.2
