@@ -55,7 +55,11 @@
 #include "common.h"
 #include "unix2dos.h"
 #include "querycp.h"
-
+#ifdef D2U_UNICODE
+#ifndef MSDOS  /* Unix, Cygwin */
+# include <langinfo.h>
+#endif
+#endif
 
 void PrintLicense(void)
 {
@@ -515,6 +519,21 @@ int ConvertUnixToDosNewFile(char *ipInFN, char *ipOutFN, CFlag *ipFlag, char *pr
   }
 
   InF = read_bom(InF, &ipFlag->bomtype);
+
+#ifdef D2U_UNICODE
+#ifndef MSDOS  /* Unix, Cygwin */
+  if ((ipFlag->bomtype == FILE_UTF16LE) || (ipFlag->bomtype == FILE_UTF16BE))
+  {
+    if (strcmp(nl_langinfo(CODESET), "UTF-8") != 0)
+    {
+      /* Don't convert UTF-16 files when the locale encoding is not UTF-8
+       * to prevent loss of characters. */
+      ipFlag->status |= LOCALE_NOT_UTF8 ;
+      RetVal = -1;
+    }
+  }
+#endif
+#endif
 
   if ((ipFlag->add_bom) || (ipFlag->bomtype > 0))
     fprintf(TempF, "%s", "\xEF\xBB\xBF");  /* UTF-8 BOM */
@@ -1014,6 +1033,13 @@ int main (int argc, char *argv[])
               fprintf(stderr,"%s: ",progname);
               fprintf(stderr, _("code page %d is not supported.\n"), pFlag->ConvMode);
             }
+          } else if (pFlag->status & LOCALE_NOT_UTF8)
+          {
+            if (!pFlag->Quiet)
+            {
+              fprintf(stderr,"%s: ",progname);
+              fprintf(stderr, _("Skipping UTF-16 file %s, the current locale encoding is not UTF-8.\n"), argv[ArgIdx-1]);
+            }
           } else {
             if (!pFlag->Quiet)
             {
@@ -1072,6 +1098,13 @@ int main (int argc, char *argv[])
           {
             fprintf(stderr,"%s: ",progname);
             fprintf(stderr, _("code page %d is not supported.\n"), pFlag->ConvMode);
+          }
+        } else if (pFlag->status & LOCALE_NOT_UTF8)
+        {
+          if (!pFlag->Quiet)
+          {
+            fprintf(stderr,"%s: ",progname);
+            fprintf(stderr, _("Skipping UTF-16 file %s, the current locale encoding is not UTF-8.\n"), argv[ArgIdx]);
           }
         } else {
           if (!pFlag->Quiet)
