@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 6.0-beta3
-DOS2UNIX_VERSION_SHORT = 60b3
-DOS2UNIX_DATE = 2012-03-23
+DOS2UNIX_VERSION = 6.0-beta4
+DOS2UNIX_VERSION_SHORT = 60b4
+DOS2UNIX_DATE = 2012-03-24
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
